log
Thu 21 Mar 2024 10:19:47 PM UTC: 
 tests:  0|5
total_score: 0/70
4201042
Thu 21 Mar 2024 10:42:39 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
4f8afc6
Thu 21 Mar 2024 10:57:16 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:11: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   64 |     *dato = (int*)next(L);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
0e5a495
Thu 21 Mar 2024 10:57:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
116896f
